# wxwidgets

./: .agent.md  BUILD-00.yaml  BrushMaterialEditorDialog_fixed.cpp  CMakeLists.txt  MASTER_PROJECT_PROMPT.md  MASTER_PROJECT_PROMPT.xml  PROJECT_KANBAN_BOARD.md  REFACTOR-01-Migration-Implementation-Report.md  ResourcePathManager_updated.cpp  UI-01_Analysis_Summary.md  UI-01_Implementation_Complete.md  UI-02_Analysis_Summary.md  UI-02_Implementation_Complete.md  UI-04_Analysis_Summary.md  UI-04_Implementation_Fixed.md  UI-05_Analysis_Summary.md  UI-05_Implementation_Complete.md  UI-05_Implementation_Fixed.md  UI-06_Analysis_Summary.md  UI-06_Implementation_Complete.md  UI-07_Analysis_Summary.md  UI-07_Implementation_Complete.md  UI-08_Implementation_Complete.md  UI-09_Implementation_Complete.md  UI-10_Implementation_Complete.md  UI-11_Analysis_Summary.md  UI-EditorWindow_Implementation_Complete.md  UI_Implementation_Fix_Instructions_Combined.md  analyze_error_patterns.py  analyze_wbs_files.py  attempt_targeted_fixes.py  attempt_wbs_fixes.py  cleanup_script.py  copy_error_summary.py  create_output_dirs.py  dependency_manifest.yaml  dependency_replacements.md  file_segregation_log.json  functionality_index.yaml  generate_core01_yaml.py  (+87 more)
Project_QT/: .gitignore  CMakeLists.txt  agents.md
Project_QT/errors/compiler_errors/__msvc_int128/: __msvc_int128.json
Project_QT/errors/compiler_errors/__msvc_xlocinfo_types/: __msvc_xlocinfo_types.json
Project_QT/errors/compiler_errors/clocale/: clocale.json
Project_QT/errors/compiler_errors/corecrt_startup/: corecrt_startup.json
Project_QT/errors/compiler_errors/ios/: ios.json
Project_QT/errors/compiler_errors/locale/: locale.json
Project_QT/errors/compiler_errors/memory_resource/: memory_resource.json
Project_QT/errors/compiler_errors/mutex/: mutex.json
Project_QT/errors/compiler_errors/process/: process.json
Project_QT/errors/compiler_errors/q20algorithm/: q20algorithm.json
Project_QT/errors/compiler_errors/q20chrono/: q20chrono.json
Project_QT/errors/compiler_errors/q20map/: q20map.json
Project_QT/errors/compiler_errors/q20utility/: q20utility.json
Project_QT/errors/compiler_errors/q20vector/: q20vector.json
Project_QT/errors/compiler_errors/q23functional/: q23functional.json
Project_QT/errors/compiler_errors/q23type_traits/: q23type_traits.json
Project_QT/errors/compiler_errors/q23utility/: q23utility.json
Project_QT/errors/compiler_errors/q26numeric/: q26numeric.json
Project_QT/errors/compiler_errors/qabstracteventdispatcher/: qabstracteventdispatcher.json
Project_QT/errors/compiler_errors/qabstractitemmodel/: qabstractitemmodel.json
Project_QT/errors/compiler_errors/qabstractsocket/: qabstractsocket.json
Project_QT/errors/compiler_errors/qabstractspinbox/: qabstractspinbox.json
Project_QT/errors/compiler_errors/qapplication/: qapplication.json
Project_QT/errors/compiler_errors/qbasictimer/: qbasictimer.json
Project_QT/errors/compiler_errors/qcalendar/: qcalendar.json
Project_QT/errors/compiler_errors/qcborcommon/: qcborcommon.json
Project_QT/errors/compiler_errors/qcborvalue/: qcborvalue.json
Project_QT/errors/compiler_errors/qcheckbox/: qcheckbox.json
Project_QT/errors/compiler_errors/qcompleter/: qcompleter.json
Project_QT/errors/compiler_errors/qcoreapplication/: qcoreapplication.json
Project_QT/errors/compiler_errors/qcoreapplication_platform/: qcoreapplication_platform.json
Project_QT/errors/compiler_errors/qdatetime/: qdatetime.json
Project_QT/errors/compiler_errors/qdeadlinetimer/: qdeadlinetimer.json
Project_QT/errors/compiler_errors/qelapsedtimer/: qelapsedtimer.json
Project_QT/errors/compiler_errors/qeventloop/: qeventloop.json
Project_QT/errors/compiler_errors/qfiledevice/: qfiledevice.json
Project_QT/errors/compiler_errors/qframe/: qframe.json
Project_QT/errors/compiler_errors/qfunctionaltools_impl/: qfunctionaltools_impl.json
Project_QT/errors/compiler_errors/qfutureinterface/: qfutureinterface.json
Project_QT/errors/compiler_errors/qgenericmatrix/: qgenericmatrix.json
Project_QT/errors/compiler_errors/qgroupbox/: qgroupbox.json
Project_QT/errors/compiler_errors/qguiapplication/: qguiapplication.json
Project_QT/errors/compiler_errors/qguiapplication_platform/: qguiapplication_platform.json
Project_QT/errors/compiler_errors/qhash/: qhash.json
Project_QT/errors/compiler_errors/qhostaddress/: qhostaddress.json
Project_QT/errors/compiler_errors/qinputdialog/: qinputdialog.json
Project_QT/errors/compiler_errors/qinputmethod/: qinputmethod.json
Project_QT/errors/compiler_errors/qiodevice/: qiodevice.json
Project_QT/errors/compiler_errors/qitemselectionmodel/: qitemselectionmodel.json
Project_QT/errors/compiler_errors/qlabel/: qlabel.json
Project_QT/graph/: dependencies.txt  dot.py
Project_QT/src/: CMakeLists.txt  main.cpp
Project_QT/src/core/: CMakeLists.txt  Creature.cpp  Creature.h  IItemTypeProvider.h  Item.cpp  Item.h  ItemTypeProvider.cpp  ItemTypeProvider.h  Position.cpp  Position.h  Spawn.cpp  Spawn.h  Tile.cpp  Tile.h  forward_declarations.h  map_constants.h
Project_QT/src/editor_logic/: CMakeLists.txt  EditorController.cpp  EditorController.h
Project_QT/src/mapcore/: appundocommand.cpp  appundocommand.h  batchcommand.cpp  batchcommand.h  changetilecommand.cpp  changetilecommand.h
Project_QT/src/network/: CMakeLists.txt  QtLiveClient.cpp  QtLiveClient.h
Project_QT/src/profiling/: CMakeLists.txt  MemoryBenchmarks.h  ProfilingMain.cpp  ProfilingUtils.cpp  ProfilingUtils.h  README_VISUAL_STUDIO_PROFILING.md  REFACTOR-02_COMPLETION_SUMMARY.md  profiling_scenarios.txt
Project_QT/src/resources/: menubar.xml  resources.qrc
Project_QT/src/tests/: CMakeLists.txt
Project_QT/src/ui/: CMakeLists.txt  EditorInstanceWidget.cpp  EditorInstanceWidget.h  MainToolBar.cpp  MainToolBar.h  MainWindow.cpp  MainWindow.h  MainWindowActions.cpp
Project_QT/tests/mapcore/: test_undoredo.cpp
Project_RMELiveServer/: CMakeLists.txt
Project_RMELiveServer/src/: main.cpp  qtlivepeer.cpp  qtlivepeer.h  qtliveserver.cpp  qtliveserver.h
(+999 files in other folders)
